add llm diagram generation